updated according to changes in OpenSearch core; added integTests and yamlRestTest according to spec. integTests don't work yet so running with the following vars works -Dopensearch.version=2.7.0 -Dskip.integtests=true -Djava.security.manager=allow -Dbuild.snapshot=false
buid.snapshot runs the yamlRestTest successfully. -Djava.security.manager=allow allows the deprecated SecurityManager to do it's work

also updated StoredFeatureParserTests.writeAsNonFormattedString to require MediaType as per https://github.com/opensearch-project/OpenSearch/commit/f9eb9bfe17b71aae7e2a00ac0337909f1b3e61e7

Signed-off-by: Mark Cohen <markcoh@amazon.com>